website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.8.1/api/themes/theme-configuration.mdx
---
sidebar_position: 1
sidebar_label: Configuration
slug: /api/themes/configuration
toc_max_heading_level: 4
---

# 主題配置

import APITable from '@site/src/components/APITable';

此配置適用於所有[主要主題](./overview.mdx)。

## 通用設定 {#common}

### 色彩模式 {#color-mode---dark-mode}

經典主題預設提供淺色與深色模式支援，並在導航欄提供切換開關。

可透過`colorMode`物件自訂色彩模式支援。

接受欄位：

```mdx-code-block
<APITable>
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `defaultMode` | <code>'light' \| 'dark'</code> | `'light'` | The color mode when user first visits the site. |
| `disableSwitch` | `boolean` | `false` | Hides the switch in the navbar. Useful if you want to support a single color mode. |
| `respectPrefersColorScheme` | `boolean` | `false` | Whether to use the `prefers-color-scheme` media-query, using user system preferences, instead of the hardcoded `defaultMode`. |

```mdx-code-block
</APITable>
```

配置範例：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    // highlight-start
    colorMode: {
      defaultMode: 'light',
      disableSwitch: false,
      respectPrefersColorScheme: false,
    },
    // highlight-end
  },
};
```

:::warning

當`respectPrefersColorScheme: true`時，`defaultMode`會被使用者系統偏好設定覆寫。

若您僅想支援單一色彩模式，建議忽略使用者系統偏好設定。

:::

### 元數據圖片 {#meta-image}

可配置預設圖片用於元標籤，特別是`og:image`和`twitter:image`。

接受欄位：

```mdx-code-block
<APITable>
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `image` | `string` | `undefined` | The meta image URL for the site. Relative to your site's "static" directory. Cannot be SVGs. Can be external URLs too. |

```mdx-code-block
</APITable>
```

配置範例：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    // highlight-next-line
    image: 'img/docusaurus.png',
  },
};
```

### 元數據 {#metadata}

可配置額外HTML元數據（並覆寫現有設定）。

接受欄位：

```mdx-code-block
<APITable>
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `metadata` | `Metadata[]` | `[]` | Any field will be directly passed to the `<meta />` tag. Possible fields include `id`, `name`, `property`, `content`, `itemprop`, etc. |

```mdx-code-block
</APITable>
```

配置範例：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    // highlight-next-line
    metadata: [{name: 'twitter:card', content: 'summary'}],
  },
};
```

### 公告欄 {#announcement-bar}

當需要在網站發布公告時，可添加公告欄。這是位於導航欄上方非固定且可關閉的面板，所有配置皆位於`announcementBar`物件中。

接受欄位：

```mdx-code-block
<APITable name="announcement-bar">
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `id` | `string` | `'announcement-bar'` | Any value that will identify this message. |
| `content` | `string` | `''` | The text content of the announcement. HTML will be interpolated. |
| `backgroundColor` | `string` | `'#fff'` | Background color of the entire bar. |
| `textColor` | `string` | `'#000'` | Announcement text color. |
| `isCloseable` | `boolean` | `true` | Whether this announcement can be dismissed with a '×' button. |

```mdx-code-block
</APITable>
```

配置範例：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    // highlight-start
    announcementBar: {
      id: 'support_us',
      content:
        'We are looking to revamp our docs, please fill <a target="_blank" rel="noopener noreferrer" href="#">this survey</a>',
      backgroundColor: '#fafbfc',
      textColor: '#091E42',
      isCloseable: false,
    },
    // highlight-end
  },
};
```

## 外掛程式

我們的[主要主題](./overview.mdx)為Docusaurus核心內容外掛提供額外主題配置選項。

### 文檔

```mdx-code-block
<APITable name="navbar-overview">
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `versionPersistence` | `'localStorage' \| 'none'` | `undefined` | Defines the browser persistence of the preferred docs version. |
| `sidebar.hideable` | `boolean` | `false` | Show a hide button at the bottom of the sidebar. |
| `sidebar.autoCollapseCategories` | `boolean` | `false` | Automatically collapse all sibling categories of the one you navigate to. |

```mdx-code-block
</APITable>
```

配置範例：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    docs: {
      // highlight-start
      versionPersistence: 'localStorage',
      sidebar: {
        hideable: false,
        autoCollapseCategories: false,
      },
      // highlight-end
    },
  },
};
```

### 部落格

```mdx-code-block
<APITable name="navbar-overview">
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `sidebar.groupByYear` | `boolean` | `true` | Group sidebar blog posts by years. |

```mdx-code-block
</APITable>
```

配置範例：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    blog: {
      // highlight-start
      sidebar: {
        groupByYear: true,
      },
      // highlight-end
    },
  },
};
```

## 導航欄 {#navbar}

接受欄位：

```mdx-code-block
<APITable name="navbar-overview">
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `title` | `string` | `undefined` | Title for the navbar. |
| `logo` | _See below_ | `undefined` | Customization of the logo object. |
| `items` | `NavbarItem[]` | `[]` | A list of navbar items. See specification below. |
| `hideOnScroll` | `boolean` | `false` | Whether the navbar is hidden when the user scrolls down. |
| `style` | <code>'primary' \| 'dark'</code> | Same as theme | Sets the navbar style, ignoring the dark/light theme. |

```mdx-code-block
</APITable>
```

### 導航欄標誌 {#navbar-logo}

標誌可置於[靜態資料夾](static-assets.mdx)中。標誌URL預設設為網站根路徑。雖然可自訂標誌URL，但若為外部連結將在新分頁開啟。此外，可覆寫標誌連結的target屬性值，當文件網站託管於主網站子目錄時特別有用，此情況下可能不需讓標誌連結至主網站時開啟新分頁。

為加強深色模式支援，亦可為此模式設定不同標誌。

接受的欄位：

```mdx-code-block
<APITable name="navbar-logo">
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `alt` | `string` | `undefined` | Alt tag for the logo image. |
| `src` | `string` | **Required** | URL to the logo image. Base URL is appended by default. |
| `srcDark` | `string` | `logo.src` | An alternative image URL to use in dark mode. |
| `href` | `string` | `siteConfig.baseUrl` | Link to navigate to when the logo is clicked. |
| `width` | <code>string \| number</code> | `undefined` | Specifies the `width` attribute. |
| `height` | <code>string \| number</code> | `undefined` | Specifies the `height` attribute. |
| `target` | `string` | Calculated based on `href` (external links will open in a new tab, all others in the current one). | The `target` attribute of the link; controls whether the link is opened in a new tab, the current one, or otherwise. |
| `className` | `string` | `undefined` | CSS class applied to the image. |
| `style` | `object` | `undefined` | CSS inline style object. React/JSX flavor, using camelCase properties. |

```mdx-code-block
</APITable>
```

範例設定：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    navbar: {
      title: 'Site Title',
      // highlight-start
      logo: {
        alt: 'Site Logo',
        src: 'img/logo.svg',
        srcDark: 'img/logo_dark.svg',
        href: 'https://docusaurus.io/',
        target: '_self',
        width: 32,
        height: 32,
        className: 'custom-navbar-logo-class',
        style: {border: 'solid red'},
      },
      // highlight-end
    },
  },
};
```

### 導航欄項目 {#navbar-items}

您可以透過 `themeConfig.navbar.items` 新增項目至導航欄。

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    navbar: {
      // highlight-start
      items: [
        {
          type: 'doc',
          position: 'left',
          docId: 'introduction',
          label: 'Docs',
        },
        {to: 'blog', label: 'Blog', position: 'left'},
        {
          type: 'docsVersionDropdown',
          position: 'right',
        },
        {
          type: 'localeDropdown',
          position: 'right',
        },
        {
          href: 'https://github.com/facebook/docusaurus',
          position: 'right',
          className: 'header-github-link',
          'aria-label': 'GitHub repository',
        },
      ],
      // highlight-end
    },
  },
};
```

根據 `type` 欄位的不同，這些項目可具有不同的行為。以下章節將介紹所有可用的導航欄項目類型。

#### 導航欄連結 {#navbar-link}

預設情況下，導航欄項目是常規連結（內部或外部）。

React Router 應會自動將活動連結樣式套用至連結，但在邊緣情況下您可使用 `activeBasePath`。若某連結需在多個不同路徑下保持活動狀態（例如當您在同一側邊欄下有多個文件夾時），可使用 `activeBaseRegex`。`activeBaseRegex` 是比 `activeBasePath` 更靈活的替代方案且優先於它——Docusaurus 會將其解析為正則表達式並與當前 URL 進行匹配測試。

外站（外部）連結會自動獲取 `target="_blank" rel="noopener noreferrer"` 屬性。

接受的欄位：

```mdx-code-block
<APITable name="navbar-link">
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `type` | `'default'` | Optional | Sets the type of this item to a link. |
| `label` | `string` | **Required** | The name to be shown for this item. |
| `html` | `string` | Optional | Same as `label`, but renders pure HTML instead of text content. |
| `to` | `string` | **Required** | Client-side routing, used for navigating within the website. The baseUrl will be automatically prepended to this value. |
| `href` | `string` | **Required** | A full-page navigation, used for navigating outside of the website. **Only one of `to` or `href` should be used.** |
| `prependBaseUrlToHref` | `boolean` | `false` | Prepends the baseUrl to `href` values. |
| `position` | <code>'left' \| 'right'</code> | `'left'` | The side of the navbar this item should appear on. |
| `activeBasePath` | `string` | `to` / `href` | To apply the active class styling on all routes starting with this path. This usually isn't necessary. |
| `activeBaseRegex` | `string` | `undefined` | Alternative to `activeBasePath` if required. |
| `className` | `string` | `''` | Custom CSS class (for styling any item). |

```mdx-code-block
</APITable>
```

:::note

除上述欄位外，您還可指定其他任意屬性，這些屬性將套用至 HTML 連結。

:::

範例設定：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    navbar: {
      items: [
        // highlight-start
        {
          to: 'docs/introduction',
          // Only one of "to" or "href" should be used
          // href: 'https://www.facebook.com',
          label: 'Introduction',
          // Only one of "label" or "html" should be used
          // html: '<b>Introduction</b>'
          position: 'left',
          activeBaseRegex: 'docs/(next|v8)',
          target: '_blank',
        },
        // highlight-end
      ],
    },
  },
};
```

#### 導航欄下拉選單 {#navbar-dropdown}

類型為 `dropdown` 的導航欄項目具有額外的 `items` 欄位，即導航欄項目的內部陣列。

導航欄下拉選單項目僅接受以下**「連結類」項目類型**：

- [導航欄連結](#navbar-link)
- [導航欄文件連結](#navbar-doc-link)
- [導航欄文件版本](#navbar-docs-version)
- [導航欄文件側邊欄](#navbar-doc-sidebar)
- [含自訂 HTML 的導航欄](#navbar-with-custom-html)

請注意，下拉選單的基礎項目本身也是可點擊的連結，因此該項目可接收[純導航欄連結](#navbar-link)的任何屬性。

接受的欄位：

```mdx-code-block
<APITable name="navbar-dropdown">
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `type` | `'dropdown'` | Optional | Sets the type of this item to a dropdown. |
| `label` | `string` | **Required** | The name to be shown for this item. |
| `items` | <code>[LinkLikeItem](#navbar-dropdown)[]</code> | **Required** | The items to be contained in the dropdown. |
| `position` | <code>'left' \| 'right'</code> | `'left'` | The side of the navbar this item should appear on. |

```mdx-code-block
</APITable>
```

範例設定：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    navbar: {
      items: [
        // highlight-start
        {
          type: 'dropdown',
          label: 'Community',
          position: 'left',
          items: [
            {
              label: 'Facebook',
              href: 'https://www.facebook.com',
            },
            {
              type: 'doc',
              label: 'Social',
              docId: 'social',
            },
            // ... more items
          ],
        },
        // highlight-end
      ],
    },
  },
};
```

#### 導航欄文件連結 {#navbar-doc-link}

若需連結至特定文件，此特殊導航欄項目類型將渲染指向所提供 `docId` 文件的連結。只要您瀏覽同一側邊欄的文件，該連結就會獲取 `navbar__link--active` 類別。

接受的欄位：

```mdx-code-block
<APITable name="navbar-doc-link">
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `type` | `'doc'` | **Required** | Sets the type of this item to a doc link. |
| `docId` | `string` | **Required** | The ID of the doc that this item links to. |
| `label` | `string` | `docId` | The name to be shown for this item. |
| `position` | <code>'left' \| 'right'</code> | `'left'` | The side of the navbar this item should appear on. |
| `docsPluginId` | `string` | `'default'` | The ID of the docs plugin that the doc belongs to. |

```mdx-code-block
</APITable>
```

範例設定：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    navbar: {
      items: [
        // highlight-start
        {
          type: 'doc',
          position: 'left',
          docId: 'introduction',
          label: 'Docs',
        },
        // highlight-end
      ],
    },
  },
};
```

#### 連結至側邊欄的導航欄 {#navbar-doc-sidebar}

您可將導航欄項目連結至指定側邊欄的第一個文件連結（可以是文件連結或自動生成的類別索引），而無需硬編碼文件 ID。

接受的欄位：

```mdx-code-block
<APITable name="navbar-doc-sidebar">
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `type` | `'docSidebar'` | **Required** | Sets the type of this navbar item to a sidebar's first document. |
| `sidebarId` | `string` | **Required** | The ID of the sidebar that this item is linked to. |
| `label` | `string` | First document link's sidebar label | The name to be shown for this item. |
| `position` | <code>'left' \| 'right'</code> | `'left'` | The side of the navbar this item should appear on. |
| `docsPluginId` | `string` | `'default'` | The ID of the docs plugin that the sidebar belongs to. |

```mdx-code-block
</APITable>
```

:::tip

若您的側邊欄經常更新且順序不穩定，建議使用此導航欄項目類型。

:::

範例設定：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    navbar: {
      items: [
        // highlight-start
        {
          type: 'docSidebar',
          position: 'left',
          sidebarId: 'api',
          label: 'API',
        },
        // highlight-end
      ],
    },
  },
};
```

```js title="sidebars.js"
export default {
  tutorial: [
    {
      type: 'autogenerated',
      dirName: 'guides',
    },
  ],
  api: [
    // highlight-next-line
    'cli', // The navbar item will be linking to this doc
    'docusaurus-core',
    {
      type: 'autogenerated',
      dirName: 'api',
    },
  ],
};
```

#### 導航欄文件版本下拉選單 {#navbar-docs-version-dropdown}

若您使用版本化文件，此特殊導航欄項目類型將呈現包含您網站所有可用版本的下拉選單。

使用者可在不同版本間切換，同時停留在同一份文件上（只要文件ID在各版本間保持不變）。

接受欄位：

```mdx-code-block
<APITable name="navbar-docs-version-dropdown">
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `type` | `'docsVersionDropdown'` | **Required** | Sets the type of this item to a docs version dropdown. |
| `position` | <code>'left' \| 'right'</code> | `'left'` | The side of the navbar this item should appear on. |
| `dropdownItemsBefore` | <code>[LinkLikeItem](#navbar-dropdown)[]</code> | `[]` | Add additional dropdown items at the beginning of the dropdown. |
| `dropdownItemsAfter` | <code>[LinkLikeItem](#navbar-dropdown)[]</code> | `[]` | Add additional dropdown items at the end of the dropdown. |
| `docsPluginId` | `string` | `'default'` | The ID of the docs plugin that the doc versioning belongs to. |
| `dropdownActiveClassDisabled` | `boolean` | `false` | Do not add the link active class when browsing docs. |
| `versions` | `DropdownVersions` | `undefined` | Specify a custom list of versions to include in the dropdown. See [the versioning guide](../../guides/docs/versioning.mdx#docsVersionDropdown) for details. |

```mdx-code-block
</APITable>
```

類型：

```ts
type DropdownVersion = {
  /** Allows you to provide a custom display label for each version. */
  label?: string;
};

type DropdownVersions = string[] | {[versionName: string]: DropdownVersion};
```

範例配置：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    navbar: {
      items: [
        // highlight-start
        {
          type: 'docsVersionDropdown',
          position: 'left',
          dropdownItemsAfter: [{to: '/versions', label: 'All versions'}],
          dropdownActiveClassDisabled: true,
        },
        // highlight-end
      ],
    },
  },
};
```

#### 導航欄文件版本連結 {#navbar-docs-version}

若您使用版本化文件，此特殊導航欄項目類型將連結至當前瀏覽的文件版本（依據網址決定），並在無匹配版本時自動回退至最新版本。

接受欄位：

```mdx-code-block
<APITable name="navbar-docs-version">
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `type` | `'docsVersion'` | **Required** | Sets the type of this item to a doc version link. |
| `label` | `string` | The active/latest version label. | The name to be shown for this item. |
| `to` | `string` | The active/latest version. | The internal link that this item points to. |
| `position` | <code>'left' \| 'right'</code> | `'left'` | The side of the navbar this item should appear on. |
| `docsPluginId` | `string` | `'default'` | The ID of the docs plugin that the doc versioning belongs to. |

```mdx-code-block
</APITable>
```

範例配置：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    navbar: {
      items: [
        // highlight-start
        {
          type: 'docsVersion',
          position: 'left',
          to: '/path',
          label: 'label',
        },
        // highlight-end
      ],
    },
  },
};
```

#### 導航欄語言下拉選單 {#navbar-locale-dropdown}

若您使用[國際化功能](../../i18n/i18n-introduction.mdx)，此特殊導航欄項目類型將呈現包含您網站所有可用語言的下拉選單。

使用者可在不同語言間切換，同時停留在同一頁面。

接受欄位：

```mdx-code-block
<APITable name="navbar-locale-dropdown">
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `type` | `'localeDropdown'` | **Required** | Sets the type of this item to a locale dropdown. |
| `position` | <code>'left' \| 'right'</code> | `'left'` | The side of the navbar this item should appear on. |
| `dropdownItemsBefore` | <code>[LinkLikeItem](#navbar-dropdown)[]</code> | `[]` | Add additional dropdown items at the beginning of the dropdown. |
| `dropdownItemsAfter` | <code>[LinkLikeItem](#navbar-dropdown)[]</code> | `[]` | Add additional dropdown items at the end of the dropdown. |
| `queryString` | `string` | `undefined` | The query string to be appended to the URL. |

```mdx-code-block
</APITable>
```

範例配置：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    navbar: {
      items: [
        // highlight-start
        {
          type: 'localeDropdown',
          position: 'left',
          dropdownItemsAfter: [
            {
              to: 'https://my-site.com/help-us-translate',
              label: 'Help us translate',
            },
          ],
        },
        // highlight-end
      ],
    },
  },
};
```

#### 導航欄搜尋 {#navbar-search}

若您使用[搜尋功能](../../search.mdx)，搜尋欄預設會出現在導航欄最右側。

但透過此特殊導航欄項目類型，您可以變更其預設位置。

```mdx-code-block
<APITable name="navbar-search">
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `type` | `'search'` | **Required** | Sets the type of this item to a search bar. |
| `position` | <code>'left' \| 'right'</code> | `'left'` | The side of the navbar this item should appear on. |
| `className` | `string` | / | Custom CSS class for this navbar item. |

```mdx-code-block
</APITable>
```

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    navbar: {
      items: [
        // highlight-start
        {
          type: 'search',
          position: 'right',
        },
        // highlight-end
      ],
    },
  },
};
```

#### 自訂HTML導航欄項目 {#navbar-with-custom-html}

您亦可使用此導航欄項目類型，在導航欄項目中渲染自訂的HTML標記。

```mdx-code-block
<APITable name="navbar-html">
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `type` | `'html'` | **Required** | Sets the type of this item to a HTML element. |
| `position` | <code>'left' \| 'right'</code> | `'left'` | The side of the navbar this item should appear on. |
| `className` | `string` | `''` | Custom CSS class for this navbar item. |
| `value` | `string` | `''` | Custom HTML to be rendered inside this navbar item. |

```mdx-code-block
</APITable>
```

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    navbar: {
      items: [
        // highlight-start
        {
          type: 'html',
          position: 'right',
          value: '<button>Give feedback</button>',
        },
        // highlight-end
      ],
    },
  },
};
```

### 自動隱藏黏性導航欄 {#auto-hide-sticky-navbar}

您可以啟用此精緻的UI功能：當使用者向下滾動頁面時自動隱藏導航欄，並在使用者向上滾動時重新顯示。

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    navbar: {
      // highlight-next-line
      hideOnScroll: true,
    },
  },
};
```

### 導航欄樣式 {#navbar-style}

您可設定靜態導航欄樣式，同時保留主題切換功能。所選樣式將始終生效，不受使用者選擇的主題影響。

目前提供兩種樣式選項：`dark`（深色）與`primary`（基於`--ifm-color-primary`顏色）。您可在[Infima文件](https://infima.dev/docs/components/navbar/)中預覽這些樣式。

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    navbar: {
      // highlight-next-line
      style: 'primary',
    },
  },
};
```

## 程式碼區塊 {#codeblock}

Docusaurus使用[Prism React Renderer](https://github.com/FormidableLabs/prism-react-renderer)來突顯程式碼區塊。所有配置皆位於`prism`物件中。

接受欄位：

```mdx-code-block
<APITable name="codeblock">
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `theme` | `PrismTheme` | `palenight` | The Prism theme to use for light-theme code blocks. |
| `darkTheme` | `PrismTheme` | `palenight` | The Prism theme to use for dark-theme code blocks. |
| `defaultLanguage` | `string` | `undefined` | The default language to use for code blocks not declaring any explicit language. |
| `magicComments` | `MagicCommentConfig[]` | _see below_ | The list of [magic comments](../../guides/markdown-features/markdown-features-code-blocks.mdx#custom-magic-comments). |

```mdx-code-block
</APITable>
```

```ts
type MagicCommentConfig = {
  className: string;
  line?: string;
  block?: {start: string; end: string};
};
```

```js
const defaultMagicComments = [
  {
    className: 'theme-code-block-highlighted-line',
    line: 'highlight-next-line',
    block: {start: 'highlight-start', end: 'highlight-end'},
  },
];
```

### 主題 {#theme}

預設情況下，我們使用 [Palenight](https://github.com/FormidableLabs/prism-react-renderer/blob/master/packages/prism-react-renderer/src/themes/palenight.ts) 作為語法高亮主題。您可以從[可用主題清單](https://github.com/FormidableLabs/prism-react-renderer/tree/master/packages/prism-react-renderer/src/themes)中指定自訂主題。您也可以在網站處於深色模式時使用不同的語法高亮主題。

範例配置：

```js title="docusaurus.config.js"
import {themes as prismThemes} from 'prism-react-renderer';

export default {
  themeConfig: {
    prism: {
      // highlight-start
      theme: prismThemes.github,
      darkTheme: prismThemes.dracula,
      // highlight-end
    },
  },
};
```

:::note

如果您使用行高亮標記語法，可能需要為深色模式語法高亮主題指定不同的高亮背景色。請參考[指南文件](../../guides/markdown-features/markdown-features-code-blocks.mdx#line-highlighting)以獲取指引。

:::

### 預設語言 {#default-language}

您可以為未在開頭三個反引號後添加語言標記的程式碼區塊（即 ```）設定預設語言。請注意，必須傳入有效的[語言名稱](https://prismjs.com/#supported-languages)。

範例配置：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    prism: {
      // highlight-next-line
      defaultLanguage: 'javascript',
    },
  },
};
```

## 頁尾 {#footer-1}

您可以透過 `themeConfig.footer` 在頁尾添加標誌和版權聲明。標誌可放置在[靜態資料夾](static-assets.mdx)中。標誌 URL 的運作方式與導覽列標誌相同。

接受欄位：

```mdx-code-block
<APITable name="footer">
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `logo` | `Logo` | `undefined` | Customization of the logo object. See [Navbar logo](#navbar-logo) for details. |
| `copyright` | `string` | `undefined` | The copyright message to be displayed at the bottom, also supports custom HTML. |
| `style` | <code>'dark' \| 'light'</code> | `'light'` | The color theme of the footer component. |
| `links` | <code>(Column \| FooterLink)[]</code> | `[]` | The link groups to be present. |

```mdx-code-block
</APITable>
```

範例配置：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    // highlight-start
    footer: {
      logo: {
        alt: 'Meta Open Source Logo',
        src: 'img/meta_oss_logo.png',
        href: 'https://opensource.fb.com',
        width: 160,
        height: 51,
      },
      copyright: `Copyright © ${new Date().getFullYear()} My Project, Inc. Built with Docusaurus.`,
    },
    // highlight-end
  },
};
```

### 頁尾連結 {#footer-links}

您可以透過 `themeConfig.footer.links` 在頁尾添加連結。頁尾配置有兩種類型：**多欄頁尾**和**簡易頁尾**。

多欄頁尾連結為每個欄位設有 `title` 和一組 `FooterItem` 清單。

```mdx-code-block
<APITable name="footer-links">
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `title` | `string` | `undefined` | Label of the section of these links. |
| `items` | `FooterItem[]` | `[]` | Links in this section. |

```mdx-code-block
</APITable>
```

每個 `FooterItem` 的接受欄位：

```mdx-code-block
<APITable name="footer-items">
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `label` | `string` | **Required** | Text to be displayed for this link. |
| `to` | `string` | **Required** | Client-side routing, used for navigating within the website. The baseUrl will be automatically prepended to this value. |
| `href` | `string` | **Required** | A full-page navigation, used for navigating outside of the website. **Only one of `to` or `href` should be used.** |
| `html` | `string` | `undefined` | Renders the HTML pass-through instead of a simple link. In case `html` is used, no other options should be provided. |

```mdx-code-block
</APITable>
```

多欄配置範例：

```js title="docusaurus.config.js"
export default {
  footer: {
    // highlight-start
    links: [
      {
        title: 'Docs',
        items: [
          {
            label: 'Style Guide',
            to: 'docs/',
          },
          {
            label: 'Second Doc',
            to: 'docs/doc2/',
          },
        ],
      },
      {
        title: 'Community',
        items: [
          {
            label: 'Stack Overflow',
            href: 'https://stackoverflow.com/questions/tagged/docusaurus',
          },
          {
            label: 'Discord',
            href: 'https://discordapp.com/invite/docusaurus',
          },
          {
            label: 'X',
            href: 'https://x.com/docusaurus',
          },
          {
            html: `
                <a href="https://www.netlify.com" target="_blank" rel="noreferrer noopener" aria-label="Deploys by Netlify">
                  <img src="https://www.netlify.com/img/global/badges/netlify-color-accent.svg" alt="Deploys by Netlify" width="114" height="51" />
                </a>
              `,
          },
        ],
      },
    ],
    // highlight-end
  },
};
```

簡易頁尾僅有一列顯示的 `FooterItem` 清單。

簡易配置範例：

```js title="docusaurus.config.js"
export default {
  footer: {
    // highlight-start
    links: [
      {
        label: 'Stack Overflow',
        href: 'https://stackoverflow.com/questions/tagged/docusaurus',
      },
      {
        label: 'Discord',
        href: 'https://discordapp.com/invite/docusaurus',
      },
      {
        label: 'X',
        href: 'https://x.com/docusaurus',
      },
      {
        html: `
            <a href="https://www.netlify.com" target="_blank" rel="noreferrer noopener" aria-label="Deploys by Netlify">
              <img src="https://www.netlify.com/img/global/badges/netlify-color-accent.svg" alt="Deploys by Netlify" width="114" height="51" />
            </a>
          `,
      },
    ],
    // highlight-end
  },
};
```

## 目錄 {#table-of-contents}

您可以透過 `themeConfig.tableOfContents` 調整預設目錄。

```mdx-code-block
<APITable>
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `minHeadingLevel` | `number` | `2` | The minimum heading level shown in the table of contents. Must be between 2 and 6 and lower or equal to the max value. |
| `maxHeadingLevel` | `number` | `3` | Max heading level displayed in the TOC. Should be an integer between 2 and 6. |

```mdx-code-block
</APITable>
```

範例配置：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    // highlight-start
    tableOfContents: {
      minHeadingLevel: 2,
      maxHeadingLevel: 5,
    },
    // highlight-end
  },
};
```

## 鉤子 {#hooks}

### `useColorMode` {#use-color-mode}

一個用於存取色彩模式的 React 鉤子。此上下文包含選擇淺色/深色/系統模式的函式，並公開當前色彩模式和使用者的選擇。色彩模式值**不應用於動態內容渲染**（見下文）。

使用範例：

```jsx
// highlight-next-line
import {useColorMode} from '@docusaurus/theme-common';

const MyColorModeButton = () => {
  // highlight-start
  const {
    colorMode, // the "effective" color mode, never null
    colorModeChoice, // the color mode chosen by the user, can be null
    setColorMode, // set the color mode chosen by the user
  } = useColorMode();
  // highlight-end

  return (
    <button
      onClick={() => {
        const nextColorMode = colorModeChoice === 'dark' ? 'light' : 'dark';
        setColorMode(nextColorMode);
      }}>
      Toggle color mode
    </button>
  );
};
```

屬性：

- `colorMode: 'light' | 'dark'`: 當前應用於介面的有效色彩模式。該值不可為`null`。
- `colorModeChoice: 'light' | 'dark' | null`: 使用者明確選擇的色彩模式。若使用者尚未做出選擇或重置為系統/預設值時，該值可能為`null`。
- `setColorMode(colorModeChoice: 'light' | 'dark' | null, options: {persist: boolean}): void`: 當使用者明確選擇色彩模式時呼叫的函數。傳入`null`可將選擇重置為系統/預設值。預設情況下，選擇會持久化儲存於`localStorage`並在頁面重新載入時恢復，但可透過`{persist: false}`選擇退出此行為。

:::warning

請勿在渲染 React 元件時使用`colorMode`和`colorModeChoice`。此舉可能導致[無樣式內容閃爍(FOUC)](https://en.wikipedia.org/wiki/Flash_of_unstyled_content)、版面位移，以及若用於動態渲染 JSX 內容時會引發[React 水合作用](https://18.react.dev/reference/react-dom/client/hydrateRoot)不匹配問題。

然而，這些值在**React 水合作用完成後**可安全使用，例如在`useEffect`和事件監聽器中，如同上方`MyColorModeButton`範例所示。

若需根據當前主題動態渲染內容，避免 FOUC、版面位移和水合作用不匹配的唯一方法是依賴 CSS 選擇器，基於我們在頁面顯示任何內容前設定的`html`資料屬性來動態渲染內容：

```html
<html data-theme="<light | dark>" data-theme-choice="<light | dark | system>">
  <!-- 內容 -->
</html>
```

```css
[data-theme='light']
[data-theme='dark']

[data-theme-choice='light']
[data-theme-choice='dark']
[data-theme-choice='system']
```

<details>
 <summary>為何在渲染時使用`colorMode`和`colorModeChoice`不安全？</summary>

要理解此問題，需先了解[React 水合作用](https://18.react.dev/reference/react-dom/client/hydrateRoot)的運作原理。

在靜態網站生成階段，Docusaurus 無法得知使用者的色彩模式選擇，此時`useColorMode()`會返回以下靜態值：

- `colorMode = themeConfig.colorMode.defaultMode`
- `colorModeChoice = null`

在首次 React 客戶端渲染（水合作用）期間，React 必須產生完全相同的 HTML 標記，因此同樣會使用這些靜態值。

正確的`colorMode`和`colorModeChoice`值僅會在第二次 React 渲染時提供。

典型情況下，以下元件會導致**React 水合作用不匹配**。標籤可能在水合作用過程中從`light`切換為`dark`，造成使用者體驗混亂。

```jsx
import {useColorMode} from '@docusaurus/theme-common';

const DisplayCurrentColorMode = () => {
  const {colorMode} = useColorMode();
  return <span>{colorMode}</span>;
};
```

</details>

:::

:::note

呼叫`useColorMode`的元件必須是`Layout`元件的子元件。

```jsx
function ExamplePage() {
  return (
    <Layout>
      <Example />
    </Layout>
  );
}
```

:::

## 國際化 {#i18n}

請先閱讀[國際化介紹](../../i18n/i18n-introduction.mdx)。

### 翻譯檔案位置 {#translation-files-location}

- **基礎路徑**: `website/i18n/[locale]/docusaurus-theme-[themeName]`
- **多實例路徑**: 不適用
- **JSON 檔案**: 透過[`docusaurus write-translations`](../../cli.mdx#docusaurus-write-translations-sitedir)指令提取
- **Markdown 檔案**: 不適用

### 檔案系統結構範例 {#example-file-system-structure}

```bash
website/i18n/[locale]/docusaurus-theme-classic
│
│ # translations for the theme
├── navbar.json
└── footer.json
```